--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
             
             cd ..
             
-            sudo docker-compose up -d --no-deps --build vehicle_service_app vehicle_worker_app
+            sudo docker-compose up -d --no-deps --build vehicle_service vehicle_worker
             
-            sudo docker-compose exec -T vehicle_service_app npx prisma db push
+            sudo docker-compose exec -T vehicle_service npx prisma db push
             
-            sudo docker image prune -f
+            sudo docker image prune -fv
