fix: action bug

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,4 +26,4 @@ jobs:
             
             sudo docker-compose exec -T vehicle_service npx prisma db push
             
-            sudo docker image prune -fv
+            sudo docker image prune -f
