--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "dotenv": "^17.2.3"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.12.7",
     "prisma": "^5.19.1",
     "tsx": "^4.7.2",
